Sync Siddhi k8 deployment doc with beta version